# Stylus-Trace

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/aggregator/: stack_builder.rs
src/flamegraph/: generator.rs
src/parser/: stylus_trace.rs
src/rpc/: client.rs  mod.rs
tests/fixtures/: sample_trace_1.json
tests/integration/: end_to_end_test.rs
