[package]
name = "stylus-trace-studio"
version = "0.1.1"
edition = "2021"

exclude = [
  "target/*",
  ".git/*",
  ".github/*",
  "*.svg",
  "*.json",
  "profiles/*",
  "node_modules/*"
]
authors = ["Creatives Onchain"]
license = "MIT"
description = "Performance profiling and flamegraph generation for Arbitrum Stylus transactions"
repository = "https://github.com/CreativesOnchain/Stylus-Trace"
homepage = "https://github.com/CreativesOnchain/Stylus-Trace"
documentation = "https://docs.rs/stylus-trace-studio"
readme = "README.md"
keywords = ["arbitrum", "stylus", "profiling", "flamegraph", "wasm"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
inferno = { version = "0.11", default-features = false, features = ["nameattr"] }

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"

[lib]
name = "stylus_trace_studio"
path = "src/lib.rs"

[[bin]]
name = "stylus-trace"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 
strip = true
